# ExpressionInterpreter

./: CMakeLists.txt  Documentation Antonio Ramirez.docx  and.h  divide.h  equal.h  expression.h  greaterthan.h  lessthan.h  literal.h  minus.h  module3.cpp  negation.h  operand.cpp  operand.h  or.h  parse.cpp  parse.h  plus.h  subexpression.cpp  subexpression.h  symboltable.cpp  symboltable.h  ternary.h  test.txt  times.h  variable.cpp  variable.h
